Criando as views, urls e templates

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    Página inicial
+    <h1>Página inicial</h1>
+    <li><a href="ads/"> ADS </a></li>
+    <li><a href="agro_industria/"> Agro Industria </a></li>
+    <li><a href="alimentos/"> Alimentos </a></li>
+    <li><a href="apicultura/"> Apicultura </a></li>
+    <li><a href="informatica/"> Informática </a></li>
+    <li><a href="quimica/"> Química </a></li>
 </body>
 </html>
