--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Página inicial</h1>
-    <li><a href="ads/"> ADS </a></li>
+<body style="background-color: blueviolet;">
+    <h1 style="color: aliceblue;">Página inicial</h1>
+    <!-- <li><a href="ads/"> ADS </a></li>
     <li><a href="agro_industria/"> Agro Industria </a></li>
     <li><a href="alimentos/"> Alimentos </a></li>
     <li><a href="apicultura/"> Apicultura </a></li>
     <li><a href="informatica/"> Informática </a></li>
-    <li><a href="quimica/"> Química </a></li>
+    <li><a href="quimica/"> Química </a></li> -->
+    {% for curso in cursos %}
+        {{curso.nome}}
+    {% endfor %}
 </body>
 </html>
